# pydens

./: .gitignore  .gitmodules  README.md  README_.md  __init__.py  pylintrc  pyproject.toml  pytest.ini  setup.py  shippable.yml
.github/workflows/: release.yml  status.yml
deepde/: __init__.py  deep_galerkin.py  letters.py  model_tf.py  model_torch.py  syntax.py  wrapper.py
deepde/batchflow/: .gitattributes  .gitignore  MANIFEST.in  README.md  __init__.py  pylintrc  setup.py  shippable.yml
deepde/batchflow/batchflow/: __init__.py  _const.py  base.py  batch.py  batch_image.py  components.py  config.py  dataset.py  decorators.py  dsindex.py  exceptions.py  model_dir.py  named_expr.py  once_pipeline.py  pipeline.py  sampler.py  utils.py  variables.py
deepde/batchflow/docs/: Makefile  conf.py  index.rst  (+1 more)
deepde/tests/: deep_galerkin_test.py
examples/: Answers.ipynb  Reservoir modelling demo 1d.ipynb  Reservoir modelling demo 2d indicator debets.ipynb  Reservoir modelling demo 2d parabolic debet.ipynb  Reservoir modelling.ipynb  _torch_examples.ipynb  approximating_wells.ipynb  manual_research_several_wells.ipynb  pydens_sem.ipynb  pydens_tasks_1.ipynb  pydens_tasks_2.ipynb  science_engineering_sem.ipynb  utils.py
pydens/: __init__.py  letters.py  model_tf.py  model_torch.py  plot_utils.py  syntax_tree.py  tokens.py  wrapper.py
pydens/tests/: deep_galerkin_test.py  pydens_test.py
tutorials/: 0. Theory.ipynb  09_solving_PDE_with_NN.ipynb  1. Basic PDE solving.ipynb  1. Solving PDEs.ipynb  2. Advanced PyDEns.ipynb  PDE_solving.ipynb  _old.ipynb  utils.py
(+180 files in other folders)
